--- a/css/styles.css
+++ b/css/styles.css
@@ -1,33 +1,33 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 
+@import "reset.css";
+@import "variables.css";
+
+/*components*/
+@import "component/status-bar.css";
+@import "component/nav-bar.css";
+@import "component/screen-header.css";
+@import "component/user-component.css";
+@import "component/badge.css";
+@import "component/open-chat.css";
+@import "component/icon-row.css";
+@import "component/alt-screen-header.css";
+@import "component/no-mobile.css";
+
+/*Screens*/
+@import "screens/login.css";
+@import "screens/friends.css";
+@import "screens/chats.css";
+@import "screens/find.css";
+@import "screens/more.css";
+@import "screens/settings.css";
+@import "screens/chatting.css";
+
 body {
+  color: #2e363e;
   font-family: "Open Sans", serif;
 }
 
-.status-bar {
-  display: flex;
-  justify-content: center;
-}
-
-.status-bar__column {
-  width: 33%;
-}
-
-.status-bar__column:nth-child(2) {
-  display: flex;
-  justify-content: center;
-}
-
-.status-bar__column:last-child {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-}
-
-.status-bar__column .fa-battery-quarter {
-  margin: 0px 5px;
-}
-
-.status-bar__column:first-child span {
-  margin-right: 5px;
+.main-screen {
+  padding: 0px var(--horizontal-space);
 }
